--- a/src/TimerSetup.css
+++ b/src/TimerSetup.css
@@ -5,30 +5,28 @@
   padding: 12px;
   padding-bottom: 5px;
   font-size: 13px;
+  text-align: center;
+  border-bottom: 1px solid #e5e5ea;
 }
 
-.rs-col {
+.TimerSetup .rs-col {
   margin-bottom: 10px;
 }
-.rs-checkbox-checker {
+.TimerSetup .rs-checkbox-checker {
   padding-left: 34px;
   min-height: 33px;
 }
 
-.my-masonry-grid {
-  display: -webkit-box; /* Not needed if autoprefixing */
-  display: -ms-flexbox; /* Not needed if autoprefixing */
-  display: flex;
-  margin-left: -30px; /* gutter size offset */
-  width: auto;
-}
-.rs-panel {
+.TimerSetup .rs-panel {
   margin: 5px;
 }
 
-/* Style your items */
-.my-masonry-grid_column > div {
-  /* change div to reference your elements you put in <Masonry> */
-  background: grey;
-  margin-bottom: 30px;
+.TimerSetup .rs-checkbox-inline {
+  margin-left: 0;
+}
+.TimerSetup .rs-checkbox-group-inline {
+  margin-left: 0;
+}
+.TimerSetup .rs-panel-body {
+  padding: 10px;
 }
