added physical pin and silkscreen to output pins tooltips

--- a/src/Panes/TimerSetup.css
+++ b/src/Panes/TimerSetup.css
@@ -52,3 +52,8 @@
 .TimerSetup p {
   font-weight: bold;
 }
+.rs-tooltip * {
+  white-space: pre-wrap;
+  text-align: left !important;
+  font-family: monospace;
+}
