--- a/src/Plot/Plot.css
+++ b/src/Plot/Plot.css
@@ -2,6 +2,10 @@
   width: 100%;
   height: 100%;
 }
+.plotContainer .frequency {
+  position: absolute;
+  right: 0;
+}
 .plotContainer svg.plot {
   width: 100%;
   height: 100%;
