Nicer code theme

--- a/src/Panes/TimerSetup.css
+++ b/src/Panes/TimerSetup.css
@@ -49,6 +49,9 @@
 .TimerSetup .rs-panel-body {
   padding: 10px;
 }
+.TimerSetup .code-pane .rs-panel-body {
+  background: rgb(250, 250, 250);
+}
 .TimerSetup p {
   font-weight: bold;
 }
