--- a/src/Panes/ResizePanel.css
+++ b/src/Panes/ResizePanel.css
@@ -7,6 +7,10 @@
   touch-action: none;
   box-shadow: rgb(0 0 0 / 12%) 0px -20px 20px;
   z-index: 0; /* otherwise the box shadow is not visible on top of the code for some reason */
+  transition: box-shadow 500ms;
+}
+.ResizePanel.dragging {
+  box-shadow: rgb(0 0 0 / 22%) 0px -20px 20px;
 }
 .ResizePanel .notch-container {
   height: 20px;
@@ -35,7 +39,7 @@
   box-shadow: 0px 0px 10px rgb(0 0 0 / 17%);
   transition: all 250ms;
 }
-.ResizePanel .notch.active {
+.ResizePanel.dragging .notch {
   background: #eeeeee;
 }
 .ResizePanel .notch .dots {
