--- a/src/Plot/Curve.css
+++ b/src/Plot/Curve.css
@@ -5,8 +5,8 @@
 }
 .plotContainer path.curve-DeadTime-0,
 .plotContainer path.curve-DeadTime-1 {
-  stroke: none;
-  fill: rgba(0, 0, 0, 0.2);
+  stroke: rgba(0, 0, 0, 0.2);
+  fill: rgba(0, 0, 0, 0.1);
 }
 .plotContainer path.curve-TCNT2 {
   stroke-width: 10px;
